<resources>
    <string name="app_name">Sample Mobile Store</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="cart_menu_item">Cart (%1$d)</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_product_base">ProductActivityBase</string>
    <string name="cart_instructions_empty">Cart is empty</string>
    <string name="cart_instructions_not_empty">Click on an item to remove it</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_description_signed_in">The following is information about your account.</string>
    <string name="account_description_not_signed_in">Enter your information below and click the Sign In.</string>
    <string name="account_sign_in_error_title">Can\'t Sign In</string>
    <string name="account_sign_in_error_message">Please fill in all fields and try again</string>
    <string name="cart_delete_title">Remove Item</string>
    <string name="cart_delete_message">Are you sure you want to delete this entry?</string>
    <string name="checkout_description_signed_in">Verify your information below and click the Buy button at the bottom.</string>
    <string name="checkout_description_not_signed_in">Enter your information below and click the Buy button at the bottom.</string>
    <string name="checkout_order_number">Order: #%1$s</string>
    <string name="checkout_total">Total: %1$s</string>
    <string name="checkout_confirm_message">Are you sure you\'re ready to buy?</string>
    <string name="checkout_error_title">Can\'t Buy</string>
    <string name="checkout_error_message">Make sure you\'ve filled out all entries before continuing.</string>
    <string name="buy">Buy</string>
    <string name="subscribe">Subscribe to our mailing list</string>
</resources>
